--- a/1811.find-interview-candidates.md
+++ b/1811.find-interview-candidates.md
@@ -1,3 +1,4 @@
+```sql
 WITH cte_a
      AS (SELECT contest_id,
                 gold_medal AS user_id
@@ -32,6 +33,7 @@ WITH cte_a
                 Count(DISTINCT contest_id) AS game
          FROM   contests
          GROUP  BY gold_medal
+```
          HAVING game >= 3),
      cte_final
      AS (SELECT user_id
