--- a/1811.find-interview-candidates.md
+++ b/1811.find-interview-candidates.md
@@ -1,5 +1,5 @@
 ```sql
-WITH cte_a
+WITH cte_gather
      AS (SELECT contest_id,
                 gold_medal AS user_id
          FROM   contests
@@ -11,7 +11,7 @@ WITH cte_a
          SELECT contest_id,
                 bronze_medal
          FROM   contests),
-     cte_b
+     cte_con
      AS (SELECT user_id,
                 contest_id,
                 Lead(contest_id, 1)
@@ -22,10 +22,10 @@ WITH cte_a
                   OVER (
                     partition BY user_id
                     ORDER BY contest_id) AS third
-         FROM   cte_a),
+         FROM   cte_gather),
      cte_findcon
      AS (SELECT DISTINCT user_id
-         FROM   cte_b
+         FROM   cte_con
          WHERE  second IS NOT NULL
                 AND third IS NOT NULL),
      gold_only
