--- a/180.md
+++ b/180.md
@@ -4,7 +4,7 @@
 #INNER JOIN Logs AS L2 ON L1.Id = L2.Id -1 AND L1.Num = L2.Num
 #INNER JOIN Logs AS L3 ON L2.Id = L3.Id -1 AND L2.Num = L3.Num
 
-
+```sql
 WITH CTE_A AS (
 SELECT
 Id, 
@@ -17,3 +17,4 @@ SELECT
  Num
 FROM CTE_A
 WHERE Num = two AND Num = three
+```
