--- a/184.md
+++ b/184.md
@@ -7,15 +7,18 @@ SELECT
 FROM Employee AS E
 LEFT OUTER JOIN Department AS D
 ON E.DepartmentId = D.Id
+), 
+CTE_Two AS
+(
+  SELECT
+  Name, 
+  Dept_Name,
+  Salary, 
+  DENSE_RANK() OVER (Partition by Dept_Name order by Salary DESC) as r
+  FROM CTE_ALL 
 )
-SELECT * 
-FROM (
-SELECT 
-Name, 
-Dept_Name, 
-Salary,
-DENSE_RANK() over (PARTITION BY DepartmentId ORDER BY Salary DESC) as rr
-FROM CTE_ALL
- ) as q 
- where rr = 1
+
+SELECT Name, Dept_Name, Salary
+ FROM CTE_Two
+ WHERE r=1
  ```
