--- a/585.md
+++ b/585.md
@@ -15,8 +15,8 @@ CTE_F2 AS
 (
 SELECT 
 one,
-count(two) as ff,
-DENSE_RANK() over ( order by COUNT(two) DESC) as r
+count(distinct  two) as ff,
+DENSE_RANK() over ( order by COUNT(distinct  two) DESC) as r
 FROM
 CTE_F
 group by 
