--- a/571.md
+++ b/571.md
@@ -1,20 +1,15 @@
 ```
-WITH CTE_A as (
-SELECT 
-
-sum(Frequency)/2 as q
-
-FROM Numbers),
-
+WITH 
 CTE_B AS(
 select 
 Number,
-sum(Frequency) over (order by Number) as e
+sum(Frequency) over (order by Number) as e, 
+sum(Frequency) over () as q
 from Numbers
 )
 
 select Number
 from CTE_B
-where  CTE_B.e >= (select * from CTE_A)
-and (select * from CTE_A)+1 >= CTE_B.e
+where  CTE_B.e >= (CTE_B.q/2)
+and (CTE_B.q/2)+1 >= CTE_B.e
 ```
